--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Markdown==3.5.1
 MarkupSafe==2.1.3
+pybind11-stubgen==2.3.6
 python-dotenv==1.0.0
 python-http-client==3.3.7
 requests==2.31.0
