--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+attrs==23.1.0
 beautifulsoup4==4.12.2
 blinker==1.7.0
 certifi==2023.7.22
@@ -5,20 +6,29 @@ charset-normalizer==3.3.2
 click==8.1.7
 Flask==3.0.0
 graphql-core==3.2.3
+h11==0.14.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Markdown==3.5.1
 MarkupSafe==2.1.3
+outcome==1.3.0.post0
 pybind11-stubgen==2.3.6
+PySocks==1.7.1
 python-dotenv==1.0.0
 python-http-client==3.3.7
 requests==2.31.0
+selenium==4.15.2
 sendgrid==6.10.0
 sgqlc==16.3
+sniffio==1.3.0
+sortedcontainers==2.4.0
 soupsieve==2.5
 starkbank-ecdsa==2.2.0
+trio==0.23.1
+trio-websocket==0.11.1
 types-requests==2.31.0.10
 urllib3==2.1.0
 waitress==2.1.2
 Werkzeug==3.0.1
+wsproto==1.2.0
