--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Jinja2==3.1.2
 Markdown==3.5.1
 MarkupSafe==2.1.3
 outcome==1.3.0.post0
+Pillow==10.1.0
 pybind11-stubgen==2.3.6
 PySocks==1.7.1
 python-dotenv==1.0.0
@@ -27,6 +28,7 @@ soupsieve==2.5
 starkbank-ecdsa==2.2.0
 trio==0.23.1
 trio-websocket==0.11.1
+types-Pillow==10.1.0.2
 types-requests==2.31.0.10
 urllib3==2.1.0
 waitress==2.1.2
