--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,39 @@
-attrs==23.1.0
-beautifulsoup4==4.12.2
-blinker==1.7.0
-certifi==2023.11.17
+attrs==23.2.0
+beautifulsoup4==4.12.3
+blinker==1.8.2
+certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
-Flask==3.0.0
+Flask==3.0.3
 graphql-core==3.2.3
 h11==0.14.0
-idna==3.6
-itsdangerous==2.1.2
-Jinja2==3.1.2
-Markdown==3.5.1
-MarkupSafe==2.1.3
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+Markdown==3.6
+MarkupSafe==2.1.5
 outcome==1.3.0.post0
-Pillow==10.1.0
-pybind11-stubgen==2.4.2
+pillow==10.3.0
+pybind11-stubgen==2.5.1
 PySocks==1.7.1
-python-dotenv==1.0.0
+python-dotenv==1.0.1
 python-http-client==3.3.7
 requests==2.31.0
-selenium==4.15.2
-sendgrid==6.10.0
+selenium==4.20.0
+sendgrid==6.11.0
 sgqlc==16.3
-sniffio==1.3.0
+sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
 starkbank-ecdsa==2.2.0
-trio==0.23.1
+trio==0.25.0
 trio-websocket==0.11.1
-types-Pillow==10.1.0.2
-types-requests==2.31.0.10
-urllib3==2.1.0
-waitress==2.1.2
-Werkzeug==3.0.1
+types-Markdown==3.6.0.20240316
+types-Pillow==10.2.0.20240423
+types-requests==2.31.0.20240406
+types-waitress==3.0.0.20240423
+typing_extensions==4.11.0
+urllib3==2.2.1
+waitress==3.0.0
+Werkzeug==3.0.3
 wsproto==1.2.0
